[package]
name = "woland-reputation"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "woland_reputation"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token"] }
